# ibento-rs

./: .env  Cargo.toml  README.md  build.rs
client/: README.md  mix.exs  rebar.config  rebar3.crashdump
client/config/: config.exs
client/lib/ibento/: client.ex
client/lib/ibento/client/: application.ex
client/src/: ibento_event.erl  ibento_google_struct.erl  ibento_ibento_bhvr.erl  ibento_ibento_client.erl  ibento_ibento_pb.erl  ibento_struct_pb.erl  ibento_timestamp_pb.erl
client/test/i_bento/: client_test.exs
proto/: ibento.proto
server/: Cargo.toml  README.md  build.rs  notes
server/src/: data.rs  lib.rs  schema.rs
src/: client.rs  data.rs  server.rs
