[package]
name = "ibento-rs"
version = "0.1.0"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
edition = "2018"

[[bin]]
name = "ibento-server"
path = "src/server.rs"

[[bin]]
name = "ibento-client"
path = "src/client.rs"

[dependencies]
futures01 = { package = "futures", version = "0.1" }
futures-preview = {git = "https://github.com/rust-lang-nursery/futures-rs/", features = ["compat", "io-compat", "async-await", "nightly"]}
bytes = "0.4"
env_logger = { version = "0.5", default-features = false }
log = "0.4"
http = "0.1"
prost = "0.5"
prost-types = "0.5"
tokio = "0.1"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-grpc = { git = "https://github.com/LucioFranco/tower-grpc/", branch = "hyper", features = ["tower-hyper"] }
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
hyper = "0.12"
tower-service = "0.2"
tower-util = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
maplit = "1.0.1"
runtime = "0.3.0-alpha.3"
runtime-tokio = "0.3.0-alpha.3"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
r2d2 = "0.8.4"
tokio-threadpool = "0.1.14"

[build-dependencies]
tower-grpc-build = { git = "https://github.com/LucioFranco/tower-grpc/", branch = "hyper", features = ["tower-hyper"] }
